@@ -29,6 +29,12 @@
         solr.RAMDirectoryFactory is memory based and not persistent. -->
   <directoryFactory name="DirectoryFactory" class="${solr.directoryFactory:solr.RAMDirectoryFactory}"/>
   
+  <updateHandler class="solr.DirectUpdateHandler2">
+    <listener event="postCommit" 
+              class="org.apache.solr.core.MockEventListener" />
+    <listener event="postOptimize" 
+              class="org.apache.solr.core.MockEventListener" />
+  </updateHandler>
   
   <query>
   
@@ -43,6 +49,9 @@
         <lst> <str name="q">rocks</str> <str name="start">0</str> <str name="rows">10</str> <str name="qt">mock</str></lst>
       </arr>
     </listener>
+    <listener event="newSearcher"
+              class="org.apache.solr.core.MockEventListener" />
+
 
     <!-- a firstSearcher event is fired whenever a new searcher is being
          prepared but there is no current registered searcher to handle
@@ -54,6 +63,9 @@
         </lst>
       </arr>
     </listener>
+    <listener event="firstSearcher"
+              class="org.apache.solr.core.MockEventListener" />
+
   
   </query>
   <requestHandler name="mock" class="org.apache.solr.core.MockQuerySenderListenerReqHandler" default="true">
